<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="24dp"
    android:background="@color/colorBackground">

    <TextView
        android:id="@+id/registerTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/registerTitle"
        android:textColor="@color/colorTextPrimary"
        android:textSize="24sp"
        android:textStyle="bold"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteY="145dp" />

    <EditText
        android:id="@+id/registerUserField"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginTop="80dp"
        android:backgroundTint="@color/colorPrimary"
        android:hint="@string/registerUserHint"
        android:inputType="text"
        android:padding="10dp"
        android:textColor="@color/colorTextPrimary"
        android:textColorHint="@color/colorTextSecondary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/registerTitle" />

    <EditText
        android:id="@+id/registerPassField"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginTop="12dp"
        android:backgroundTint="@color/colorPrimary"
        android:hint="@string/registerPassHint"
        android:inputType="textPassword"
        android:padding="10dp"
        android:textColor="@color/colorTextPrimary"
        android:textColorHint="@color/colorTextSecondary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/registerUserField" />

    <Button
        android:id="@+id/registerConfirmButton"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginTop="108dp"
        android:backgroundTint="@color/colorPrimary"
        android:text="@string/registrarseBtn"
        android:textColor="@color/colorOnPrimary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/registerPassField" />

    <Button
        android:id="@+id/backToLoginButton"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginTop="40dp"
        android:backgroundTint="@color/colorSecondary"
        android:text="@string/volverLoginBtn"
        android:textColor="@color/colorOnPrimary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/registerConfirmButton" />

</androidx.constraintlayout.widget.ConstraintLayout>
