<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:background="@color/colorBackground">

    <EditText
        android:id="@+id/nExpedienteRecursoField"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginTop="160dp"
        android:backgroundTint="@color/colorPrimary"
        android:hint="@string/nExpedienteRecurso"
        android:inputType="text"
        android:padding="10dp"
        android:textColor="@color/colorTextPrimary"
        android:textColorHint="@color/colorTextSecondary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <Switch
        android:id="@+id/switchResueltoRecurso"
        android:layout_width="380dp"
        android:layout_height="50dp"
        android:layout_marginTop="36dp"
        android:paddingStart="8dp"
        android:text="@string/switchPendiente1"
        android:textColor="@color/colorTextPrimary"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/nExpedienteRecursoField"
        tools:ignore="RtlSymmetry,UseSwitchCompatOrMaterialXml" />

    <Button
        android:id="@+id/btnIrRecursoExtra"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginTop="168dp"
        android:backgroundTint="@color/colorSecondaryVariant"
        android:text="@string/irRecursoExtra"
        android:textColor="@color/colorOnPrimary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/switchResueltoRecurso" />

    <Button
        android:id="@+id/cancelarRecursoGuardiaButton"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginBottom="48dp"
        android:backgroundTint="@color/colorSecondary"
        android:text="@string/cancelar1Btn"
        android:textColor="@color/colorOnPrimary"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/guardarRecursoGuardiaButton"
        app:layout_constraintTop_toBottomOf="@+id/btnIrRecursoExtra"
        app:layout_constraintVertical_bias="1.0"
        app:layout_constraintWidth_percent="0.48" />

    <Button
        android:id="@+id/guardarRecursoGuardiaButton"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginBottom="48dp"
        android:backgroundTint="@color/colorPrimary"
        android:text="@string/guardarApelacionbtn"
        android:textColor="@color/colorOnPrimary"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginEnd="8dp"
        app:layout_constraintEnd_toStartOf="@id/cancelarRecursoGuardiaButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnIrRecursoExtra"
        app:layout_constraintVertical_bias="1.0"
        app:layout_constraintWidth_percent="0.48" />
</androidx.constraintlayout.widget.ConstraintLayout>
